# multi-cam-yolo-ha-mqtt

./: .env.example  .gitignore  MIGRATION_COMPLETE.md  MIGRATION_NOTES.md  README.md  __init__.py  camera.py  config.py  detector.py  main-old.py  main.py  monitor.py  mqtt_client.py  multi_camera_processor.py  pyproject.toml  restart.sh  status.sh  stop.sh  stream.py  test.py  test_migration.py
engine/: gui.py  object_detection.py  object_speed.py  object_tracking.py
engine/frame_grabbers/: __init__.py  frame_grabber.py  lock_free_ringbuffer_frame_grabber.py  multi_threading_frame_grabber.py  simple_frame_grabber.py  single_frame_grabber.py
engine/trackers/ocsort/: ocsort.py
