[project]
name = "multi-cam-yolo-ha-mqtt"
version = "0.1.0"
description = "Multi-camera YOLO object detection with Home Assistant integration via MQTT. Monitor RTSP streams, detect objects, and create individual sensors for each camera."
authors = [
    {name = "Dennis Lee",email = "wylee2000@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ultralytics (>=8.3.175,<9.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "paho-mqtt (>=2.1.0,<3.0.0)",
    "argparse (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
